// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetPageChangedView renders with feature flag enabled 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  />
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page has changed. Use the start over button to scan this new target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders with optional subtitle 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  >
    <span>
      test subtitle content
    </span>
  </div>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders without optional subtitle 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  />
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;
